--- a/src/app/routes/dashboard-view/dashboard/dashboard.component.scss
+++ b/src/app/routes/dashboard-view/dashboard/dashboard.component.scss
@@ -214,8 +214,8 @@
   padding: .2rem;
 }
 
-::placeholder {
-  color: black;
-  opacity: 50%;
+input::placeholder {
+  color: black!important;
+  opacity: 50%!important;
 }
 
