added disables upon wrong or no data

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
         <a href="">Weather Map</a>
       </div> -->
       <div class="box">
-        <a routerLink="/sevenDayForecast" routerLinkActive="active"  href="">7-Day Forecast</a>
+        <a [routerLink]="link" routerLinkActive="active" href="">7-Day Forecast</a>
       </div>
       <!-- <div class="box">
         <a href="">Severe Weather</a>
