--- a/src/app/routes/dashboard-view/dashboard/dashboard.component.scss
+++ b/src/app/routes/dashboard-view/dashboard/dashboard.component.scss
@@ -166,6 +166,7 @@
 
 .search-bar-container:hover>.search-bar {
   width: 6rem;
+  border-right: .1rem solid rgba(0, 0, 0, 0.267)
 }
 
 .search-bar-container:hover>.search-bar2 {
