--- a/src/app/routes/dashboard-view/dashboard/dashboard.component.html
+++ b/src/app/routes/dashboard-view/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
 
 <div *ngIf="data !== null" class="current-weather-container-2">
   <div class="current-weather">
-    <h1>{{currentCityWeather.city}}</h1>
+    <h1>{{currentCityWeather.cityNcode}}</h1>
     <p> {{currentCityWeather.weather}}</p>
   </div>
 
